--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -1,7 +1,5 @@
-name: Publish package to GitHub Packages
-on:
-  release:
-    types: [published]
+name: Publish package to NPM Registry
+on: push
 jobs:
   build:
     runs-on: ubuntu-latest
@@ -10,14 +8,13 @@ jobs:
       packages: write
     steps:
       - uses: actions/checkout@v3
-      # Setup .npmrc file to publish to GitHub Packages
       - uses: actions/setup-node@v3
         with:
-          node-version: '16.x'
-          registry-url: 'https://registry.npmjs.org'
-          # Defaults to the user or organization that owns the workflow file
-          scope: '@pollen-solutions'
+          node-version: 16.x
+          registry-url: https://registry.npmjs.org/
+          scope: @pollen-solutions
       - run: npm ci
-      - run: npm publish --access public
+      - name: publish
+        run: npm publish --access public
         env:
-          NODE_AUTH_TOKEN: ${{ secrets.NPM_AUTH_TOKEN }}
+          NODE_AUTH_TOKEN: ${{secrets.NPM_AUTH_TOKEN}}
